# serpents-per-second

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py  constants.py
src/content/: __init__.py  maps.py  modes.py
src/game/: __init__.py  collision.py  food.py  scoring.py  snake.py
src/render/: __init__.py  font.py  hud.py  sprite_atlas.py
src/scenes/: base.py  highscores.py  main_menu.py  mode_select.py  name_entry.py  options.py  play.py  results.py
src/systems/: audio.py  input.py  logging_setup.py  saves.py  scaling.py  timing.py
tests/: test_collision.py  test_content.py  test_food_spawn.py  test_highscores.py  test_input_rules.py  test_scene_transitions.py  test_scoring.py  test_snake.py  test_speed_ramp.py  test_time_attack_timer.py  test_wrap_and_walls.py
